fix height stretch issues

--- a/web/src/app/app.styl
+++ b/web/src/app/app.styl
@@ -1,6 +1,8 @@
 #app,
 #app > div {
-  height: 100%;
+  display: flex;
+  min-height: 100%;
+  width: 100%;
 }
 
 .app-options {
