--- a/web/src/shows/shows.styl
+++ b/web/src/shows/shows.styl
@@ -1,7 +1,8 @@
 .time-periods {
   display: flex;
   flex-wrap: wrap;
-  height: 100%;
+  min-height: 100%;
+  width: 100%;
 }
 
 .shows {
